# weather-cli

./: .gitignore  README.md  pyproject.toml  style.py  weather.py
weather_cli/: main.py
